<resources>
    <string name="app_name">desafio2dsm_lt171997_au171965</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="pelicula">Pelicula</string>
    <string name="nombre_de_pelicula">Nombre de pelicula</string>
    <string name="descripci_n_de_la_pelicula">Descripción de la pelicula</string>
    <string name="a_o_de_estreno">Año de estreno</string>
    <string name="calificaci_n_1_4">Calificación (1-4)</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="registrar">Registrar</string>
    <string name="login">Login</string>
    <string name="login">Login</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="login">Login</string>
    <string name="nueva_cuenta">Nueva cuenta</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="email">Email</string>
    <string name="enviar">Enviar</string>
    <string name="registro">Registro</string>
    <string name="reiniciar_contrase_a">Reiniciar contraseña</string>
</resources>